// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BannerNotification/> rendering should render close icon when the notification is closable 1`] = `
<div
  class="bannerNotification success clickable"
>
  <div
    class="messageContainer"
  >
    <span
      class="messageText"
    >
      <span>
        foobar
      </span>
    </span>
  </div>
  <span
    class="closeIconContainer"
  >
    <img
      alt="close-icon"
      class="closeIcon"
      src="test-file-stub"
    />
  </span>
</div>
`;

exports[`<BannerNotification/> rendering should render custom HTML actions 1`] = `
<div
  class="bannerNotification success clickable"
>
  <div
    class="messageContainer"
  >
    <span
      class="messageText"
    >
      <span>
        foobar
      </span>
      <span
        class="messageAction"
      >
        <button>
          Click me !
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<BannerNotification/> rendering should render html message 1`] = `
<div
  class="bannerNotification success clickable"
>
  <div
    class="messageContainer"
  >
    <span
      class="messageText"
    >
      <span>
        <div
          class="potatoes"
        >
          patatas bravas
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`<BannerNotification/> rendering should render with default props 1`] = `
<div
  class="bannerNotification success clickable"
>
  <div
    class="messageContainer"
  >
    <span
      class="messageText"
    >
      <span>
        foobar
      </span>
    </span>
  </div>
</div>
`;

exports[`<BannerNotification/> rendering should render with icon 1`] = `
<div
  class="bannerNotification success clickable"
>
  <div
    class="messageContainer"
  >
    <img
      alt="icon"
      class="icon"
      src="test-file-stub"
    />
    <span
      class="messageText"
    >
      <span>
        foobar
      </span>
    </span>
  </div>
</div>
`;
